# time-series-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: tuned1.yml  tuned_quick.yml
docs/: README.md  capabilities.md  cli.md  config.md  dev.md  get-started.md  limitations.md  methodology.md  metrics.md  pipeline-overview.md  roadmap.md  runbook.md  validation.md
docs/concepts/: execution-costs.md  model-landscape.md  overfitting-controls.md
src/ts_ml/: __init__.py  backtest.py  cli.py  config.py  config_yaml.py  crossval.py  data.py  features.py  labels.py  meta_labeling.py  metrics.py  model.py  persistence.py  regime.py  tracking.py
src/xgboost_ts_ashare/: __init__.py  config.py  data.py  features.py  industry.py  labels.py  metrics.py  model.py
tests/: test_backtest.py  test_crossval.py  test_data.py  test_features.py  test_industry.py  test_labels.py  test_split.py  test_triple_barrier.py
