[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_ml"]

[project]
name = "time-series-ml"
version = "0.1.0"
description = "Time-series machine learning for next-day direction prediction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Richard" }]
keywords = ["time-series", "machine-learning", "xgboost", "stock-prediction", "quant"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "matplotlib",
    "seaborn",
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "pyyaml>=6.0",
    "lightgbm>=4.0",
]

[project.scripts]
ts-ml = "ts_ml.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "UP",    # pyupgrade
    "SIM",   # simplify
    "C4",    # comprehensions
    "PTH",   # pathlib
    "RUF",   # ruff-specific
]
ignore = [
    "RUF001",  # ambiguous unicode chars — Chinese punctuation is intentional
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["ts_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests", ".cache"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportMissingImports = true
reportMissingModuleSource = false
